# AutoRepack

./: .gitignore  README.md  main.py  pyproject.toml  run_tests.bat  single_packer.py  test_compress.py  test_compress_pytest.py  uuid_folders.txt
autorepack/: __main__.py  folder_analyzer.py  single_packer.py  zip_compressor.py
compression/: compressor.py  models.py
config/: config.py  constants.py  file_types.py
file_ops/: file_utils.py  permissions.py
logging/: logger.py
src/: __init__.py  common_utils.py  folder_analyzer.py  zip_compressor.py
src/autorepack/: __main__.py
src/autorepack/config/: compression_config.json  config.py
src/autorepack/core/: common_utils.py  folder_analyzer.py  single_packer.py  zip_compressor.py
src/findj/: __main__.py  batch_compress_custom.py
src/findj/test/: test_compress_pytest.py
src/repacku/: Taskfile.yml  __main__.py  cli.py
src/repacku/config/: compression_config.json  config.py
src/repacku/core/: common_utils.py  fast_scanner.py  folder_analyzer.py  single_packer.py  zip_compressor.py
src/repacku/tests/: __init__.py  test_fast_scanner.py  test_repro_selective.py
ui/: cli.py  tui.py
