[project]
# 项目发布名称可以与内部包名不同，这里仍可保留原名称；如需同步可改成 repacku
name = "autorepack"
version = "0.1.0"
description = "自动重新打包工具 - 简单版，负责处理命令行参数并调用相应的分析和压缩功能"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "PackU", email = "packu@example.com"}
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    # License classifier 可移除以避免未来弃用警告，已添加 license 字段。
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.3.0",
    "loguru>=0.7.0",
    "pyperclip>=1.8.2",
    # 移除 PresetUI 依赖，改用 Taskfile + lata (pip install lata)
    "pytest>=8.3.5",
    "typer>=0.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/HibernalGlow/AutoRepack"
"Bug Tracker" = "https://github.com/HibernalGlow/AutoRepack/issues"

[project.scripts]
repacku = "repacku.cli:run"
findj = "findj.__main__:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# 修复: 原配置引用不存在的 autorepack 目录，实际包为 repacku
packages = ["repacku", "findj"]
package-dir = {"" = "src"}
[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
